force-app/main/default/objects/Action_Plan__c/fields/Coordinating_Officer__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to track the Coordinator Officer. You may use this as a filter in reports or list views.</inlineHelpText>
    <label>Coordinating Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plans_Coord_Officer</relationshipName>
    <type>Lookup</type>
</CustomField>