force-app/main/default/objects/Action_Plan__c/fields/Created_by_MAGS_Officer__c.field-meta.xml
<CustomField>
    <fullName>Created_by_MAGS_Officer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to check that  the Action plan is created by MAGS Officer.</description>
    <label>Created by MAGS Officer</label>
    <type>Checkbox</type>
</CustomField>