force-app/main/default/objects/Action_Plan__c/fields/Date_Advice_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Advice_Approved__c</fullName>
    <label>Date Advice Approved</label>
    <type>Date</type>
</CustomField>