force-app/main/default/objects/Action_Plan__c/fields/Date_Advice_Request_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Advice_Request_Received__c</fullName>
    <label>Date Advice Request Received</label>
    <type>Date</type>
</CustomField>