force-app/main/default/objects/Action_Plan__c/fields/Date_Awaiting_Advice_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Awaiting_Advice_Approval__c</fullName>
    <label>Date Awaiting Advice Approval</label>
    <type>Date</type>
</CustomField>