force-app/main/default/objects/Action_Plan__c/fields/Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Complete__c</fullName>
    <label>Date Complete</label>
    <type>Date</type>
</CustomField>