force-app/main/default/objects/Action_Plan__c/fields/Date_Draft_Advice_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Date_Draft_Advice_in_Progress__c</fullName>
    <label>Date Draft Advice in Progress</label>
    <type>Date</type>
</CustomField>