force-app/main/default/objects/Action_Plan__c/fields/Date_First_Child_AP_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Child_AP_Assigned__c</fullName>
    <label>Date First Child AP Assigned</label>
    <type>Date</type>
</CustomField>