force-app/main/default/objects/Action_Plan__c/fields/Date_Rejected_Incorrect_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected_Incorrect_Assignment__c</fullName>
    <label>Date Rejected-Incorrect Assignment</label>
    <type>Date</type>
</CustomField>