force-app/main/default/objects/Action_Plan__c/fields/Date_stamp_on_Action_Plan_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_on_Action_Plan_in_Progress__c</fullName>
    <label>Date stamp on Action Plan in Progress</label>
    <type>DateTime</type>
</CustomField>