force-app/main/default/objects/Action_Plan__c/fields/Date_stamp_on_Action_Plan_in_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_on_Action_Plan_in_Review__c</fullName>
    <label>Date stamp on Action Plan in Review</label>
    <type>DateTime</type>
</CustomField>