force-app/main/default/objects/Action_Plan__c/fields/Date_stamp_on_Awaiting_Signature__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_on_Awaiting_Signature__c</fullName>
    <label>Date stamp on Awaiting Signature</label>
    <type>DateTime</type>
</CustomField>