force-app/main/default/objects/Action_Plan__c/fields/Date_stamp_on_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_on_Completed__c</fullName>
    <description>This field contains the date and time that the Action Plan was completed.  It an action plan is ever completed more than once, this will contain the value that it was most recently completed.</description>
    <inlineHelpText>This field contains the date and time that the Action Plan was completed.  It an action plan is ever completed more than once, this will contain the value that it was most recently completed.</inlineHelpText>
    <label>Date stamp on Completed</label>
    <type>DateTime</type>
</CustomField>