force-app/main/default/objects/Action_Plan__c/fields/Date_stamp_on_First_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_on_First_Completed__c</fullName>
    <description>This field contains the date and time that the Action Plan was completed. It an action plan is ever completed more than once, this value will always contain the datetime stamp of when the Action Plan was first completed. (Also see: Date stamp on Completed)</description>
    <inlineHelpText>This field contains the date and time that the Action Plan was completed. It an action plan is ever completed more than once, this value will always contain the datetime stamp of when the Action Plan was first completed. (Also see: Date stamp on Completed</inlineHelpText>
    <label>Date stamp on First Completed</label>
    <type>DateTime</type>
</CustomField>