force-app/main/default/objects/Action_Plan__c/fields/Date_stamp_on_Incorrect_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_on_Incorrect_Assignment__c</fullName>
    <label>Date stamp on Incorrect Assignment</label>
    <type>DateTime</type>
</CustomField>