force-app/main/default/objects/Action_Plan__c/fields/Date_stamp_on_Ready_for_Printing__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_on_Ready_for_Printing__c</fullName>
    <label>Date stamp on Ready for Printing</label>
    <type>DateTime</type>
</CustomField>