force-app/main/default/objects/Action_Plan__c/fields/Date_Time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Incident__c</fullName>
    <description>Date / Time of Incident</description>
    <inlineHelpText>Date / Time of Incident</inlineHelpText>
    <label>Date / Time of Incident</label>
    <type>DateTime</type>
</CustomField>