force-app/main/default/objects/Action_Plan__c/fields/Date_Waiting_for_GM_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Waiting_for_GM_Approval__c</fullName>
    <label>Date Waiting for GM Approval</label>
    <type>Date</type>
</CustomField>