force-app/main/default/objects/Action_Plan__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>Age of the action plan in number of days since creation. Once the status is &#39;Completed&#39;, the age stops incrementing.</description>
    <formula>IF( ISPICKVAL(Status__c, &#39;Completed&#39;) , 
    DATEVALUE(Closed_date__c) - DATEVALUE(CreatedDate),
    TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of the action plan in number of days since creation. Once the status is &#39;Completed&#39;, the age stops incrementing.</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>