force-app/main/default/objects/Action_Plan__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <description>Days overdue compared to Due Date. Can be a zero or positive number. Zero means not yet overdue. Used for RMS Min Corr reporting.</description>
    <formula>IF( 
ISBLANK(Due_Date__c), 
0, 
IF(OR(ISPICKVAL(Status__c, &#39;Completed&#39;),ISPICKVAL(Status__c, &#39;Awaiting Signature&#39;)), 
IF((Date_Complete__c - Due_Date__c) &lt; 0, 
0, 
CASE(MOD( Due_Date__c - DATE(1996,1,1),7), 
0 , CASE( MOD( (Date_Complete__c - Due_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( (Date_Complete__c - Due_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( (Date_Complete__c - Due_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( (Date_Complete__c - Due_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( (Date_Complete__c - Due_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( (Date_Complete__c - Due_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( (Date_Complete__c - Due_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Date_Complete__c - Due_Date__c)/7)*5) - 1 
) 
, 
IF((Today() - Due_Date__c) &lt; 0, 
0 
, 

CASE(MOD( Due_Date__c - DATE(1996,1,1),7), 
0 , CASE( MOD( (Today() - Due_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( (Today() - Due_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( (Today() - Due_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( (Today() - Due_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( (Today() - Due_Date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( (Today() - Due_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( (Today() - Due_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Today() - Due_Date__c)/7)*5) - 1 
) 
) 
)</formula>
    <inlineHelpText>Days overdue compared to Due Date. Can be a zero or positive number. Zero means not yet overdue. Used for RMS Min Corr reporting.</inlineHelpText>
    <label># Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>