force-app/main/default/objects/Action_Plan__c/fields/Days_to_create_action_plan__c.field-meta.xml
<CustomField>
    <fullName>Days_to_create_action_plan__c</fullName>
    <formula>DATEVALUE(CreatedDate) - DATEVALUE(Parent_Case__r.Datetime_last_assigned_queue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Days to create action plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>