force-app/main/default/objects/Action_Plan__c/fields/Days_Until_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Due__c</fullName>
    <description>This formula calculates the number of calendar days between when an action plan is due and today&#39;s date. It returns negative number if the item is coming due, zero if due today, or a positive number if the item is already overdue. In the event an item is complete, this formula returns -999 (this is so that the field can be used as a sort value on a list view of the items which require the most urgent attention - order descending by # days until overdue)</description>
    <formula>IF(
OR(ISPICKVAL(Status__c, &#39;Completed&#39;),ISPICKVAL(Status__c, &#39;Awaiting Signature&#39;)),
-999,
Due_Date__c - Today()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the number of days until overdue; useful for sorting on a list view, sort descending. Returns -999 on an AP that is already complete.</inlineHelpText>
    <label># Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>