force-app/main/default/objects/Action_Plan__c/fields/Direction_of_travel__c.field-meta.xml
<CustomField>
    <fullName>Direction_of_travel__c</fullName>
    <description>Direction of travel</description>
    <label>Direction of Travel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>