force-app/main/default/objects/Action_Plan__c/fields/Divisions__c.field-meta.xml
<CustomField>
    <fullName>Divisions__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Office of the Secretary</fullName>
            </value>
            <value>
                <fullName>Customer Strategy and Technology</fullName>
            </value>
            <value>
                <fullName>Greater Sydney</fullName>
            </value>
            <value>
                <fullName>Regional and Outer Metropolitan</fullName>
            </value>
            <value>
                <fullName>Infrastructure and Place</fullName>
            </value>
            <value>
                <fullName>Safety, Environment and Regulation</fullName>
            </value>
            <value>
                <fullName>Corporate Services</fullName>
            </value>
            <value>
                <fullName>People and Culture</fullName>
            </value>
            <value>
                <fullName>Asset Maintenance</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Customer Service Delivery</fullName>
            </value>
            <value>
                <fullName>Eastern Region</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; SEQR</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Administrative Services</fullName>
            </value>
            <value>
                <fullName>Fleet Operations &amp; Infrastructure</fullName>
            </value>
            <value>
                <fullName>Freight and Regional Development</fullName>
            </value>
            <value>
                <fullName>HCF</fullName>
            </value>
            <value>
                <fullName>Infrastructure Development</fullName>
            </value>
            <value>
                <fullName>Journey Management</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Legal - Business Support</fullName>
            </value>
            <value>
                <fullName>Light Rail</fullName>
            </value>
            <value>
                <fullName>Maritime</fullName>
            </value>
            <value>
                <fullName>Newcastle Buses, Ferries and Light Rail</fullName>
            </value>
            <value>
                <fullName>Northern Region</fullName>
            </value>
            <value>
                <fullName>North West Rail Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>