force-app/main/default/objects/Action_Plan__c/fields/Due_Date_Is_Greater_Than_Case_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Is_Greater_Than_Case_Due_Date__c</fullName>
    <formula>Due_Date__c &gt;  Parent_Case__r.Due_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Is Greater Than Case Due Date</label>
    <type>Checkbox</type>
</CustomField>