force-app/main/default/objects/Action_Plan__c/fields/E_Toll_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>E_Toll_Account_Number__c</fullName>
    <description>Customer&#39;s E-Toll Account Number</description>
    <inlineHelpText>Customer&#39;s E-Toll Account Number</inlineHelpText>
    <label>E-Toll Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>