force-app/main/default/objects/Action_Plan__c/fields/GPS_Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>GPS_Incident_Location__c</fullName>
    <description>GPS Latitude and Longitude coordinates of incident</description>
    <inlineHelpText>GPS Latitude and Longitude coordinates of incident</inlineHelpText>
    <label>GPS Incident Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>