force-app/main/default/objects/Action_Plan__c/fields/Has_Corro_Officer_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Has_Corro_Officer_Permissions__c</fullName>
    <formula>$Permission.Corro_Officer</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Corro Officer Permissions</label>
    <type>Checkbox</type>
</CustomField>