force-app/main/default/objects/Action_Plan__c/fields/Has_Liaison_Officer_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Has_Liaison_Officer_Permissions__c</fullName>
    <description>This formula returns true if the current user has the Liaison Officer permission.</description>
    <formula>$Permission.Liaison_Officer || $Permission.Corro_Officer</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Liaison Officer_Permissions</label>
    <type>Checkbox</type>
</CustomField>