force-app/main/default/objects/Action_Plan__c/fields/IsAmendment__c.field-meta.xml
<CustomField>
    <fullName>IsAmendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment</label>
    <type>Checkbox</type>
</CustomField>