force-app/main/default/objects/Action_Plan__c/fields/IsOfficeOfSecActionPlan__c.field-meta.xml
<CustomField>
    <fullName>IsOfficeOfSecActionPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in sharing rules to share action plans with Office of Sec Users</description>
    <label>IsOfficeOfSecActionPlan</label>
    <type>Checkbox</type>
</CustomField>