force-app/main/default/objects/Action_Plan__c/fields/IsRework__c.field-meta.xml
<CustomField>
    <fullName>IsRework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rework</label>
    <type>Checkbox</type>
</CustomField>