force-app/main/default/objects/Action_Plan__c/fields/Issue_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Issue_Level_1__c</fullName>
    <label>Issue Level 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>