force-app/main/default/objects/Action_Plan__c/fields/Issue_Level_3_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Level_3_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Issue Level 3  metacategorisation Id</description>
    <inlineHelpText>Issue Level 3  metacategorisation Id</inlineHelpText>
    <label>Issue Level 3 Id</label>
    <referenceTo>Taxonomy_Metadata__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>