force-app/main/default/objects/Action_Plan__c/fields/Last_To_be_Approver__c.field-meta.xml
<CustomField>
    <fullName>Last_To_be_Approver__c</fullName>
    <label>Last To be Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>