force-app/main/default/objects/Action_Plan__c/fields/Licence_Photo_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Licence_Photo_Card_Number__c</fullName>
    <description>Customer&#39;s Licence/Photo Card Number</description>
    <inlineHelpText>Customer&#39;s Licence/Photo Card Number</inlineHelpText>
    <label>Licence/Photo Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>