force-app/main/default/objects/Action_Plan__c/fields/Location_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Location_Level_2__c</fullName>
    <label>Location Level 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>