force-app/main/default/objects/Action_Plan__c/fields/Location_Level_3_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Level_3_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location Level 3  metacategorisation Id</description>
    <inlineHelpText>Issue Level 3  metacategorisation Id</inlineHelpText>
    <label>Location Level 3 Id</label>
    <referenceTo>Taxonomy_Metadata__c</referenceTo>
    <relationshipLabel>Action Plans (Location Level 3 Id)</relationshipLabel>
    <relationshipName>Action_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>