force-app/main/default/objects/Action_Plan__c/fields/Location_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Incident__c</fullName>
    <description>Location of incident/issue</description>
    <inlineHelpText>Location of incident/issue</inlineHelpText>
    <label>Location of Incident/Issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>