force-app/main/default/objects/Action_Plan__c/fields/Minister__c.field-meta.xml
<CustomField>
    <fullName>Minister__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Minister Legacy</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Plans (Minister)</relationshipLabel>
    <relationshipName>ActionPlansMinister</relationshipName>
    <type>Lookup</type>
</CustomField>