force-app/main/default/objects/Action_Plan__c/fields/Minister_User__c.field-meta.xml
<CustomField>
    <fullName>Minister_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Minister</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plans3</relationshipName>
    <type>Lookup</type>
</CustomField>