force-app/main/default/objects/Action_Plan__c/fields/MO_Instructions__c.field-meta.xml
<CustomField>
    <fullName>MO_Instructions__c</fullName>
    <label>MO Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>