force-app/main/default/objects/Action_Plan__c/fields/NominateApprovers__c.field-meta.xml
<CustomField>
    <fullName>NominateApprovers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nominate Approvers</label>
    <type>Checkbox</type>
</CustomField>