force-app/main/default/objects/Action_Plan__c/fields/OBO__c.field-meta.xml
<CustomField>
    <fullName>OBO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On behalf of field copied from case</description>
    <label>OBO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Plans (OBO)</relationshipLabel>
    <relationshipName>Action_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>