force-app/main/default/objects/Action_Plan__c/fields/OldStatus__c.field-meta.xml
<CustomField>
    <fullName>OldStatus__c</fullName>
    <label>Old Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>