force-app/main/default/objects/Action_Plan__c/fields/Other_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Other_Signatory__c</fullName>
    <description>This field is to enter a value for other signatory if &quot;Other&quot; value is selected in Signatory pick-list.</description>
    <label>Other Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>