force-app/main/default/objects/Action_Plan__c/fields/Owner_Is_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_User__c</fullName>
    <formula>LEFT(OwnerId,3) == &quot;005&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is User</label>
    <type>Checkbox</type>
</CustomField>