force-app/main/default/objects/Action_Plan__c/fields/Owner_License__c.field-meta.xml
<CustomField>
    <fullName>Owner_License__c</fullName>
    <formula>Owner:User.User_License__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner License</label>
    <type>Text</type>
</CustomField>