force-app/main/default/objects/Action_Plan__c/fields/Owner_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile_Name__c</fullName>
    <formula>BLANKVALUE(  Owner:User.Profile.Name  , Owner:User.FirstName + &#39; &#39; + Owner:User.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Profile Name</label>
    <type>Text</type>
</CustomField>