force-app/main/default/objects/Action_Plan__c/fields/Parent_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Action_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Related Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>