force-app/main/default/objects/Action_Plan__c/fields/Parent_Action_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Action_Plan_Type__c</fullName>
    <description>This field displays the value in the &quot;Type&quot; field of the parent action plan.</description>
    <formula>TEXT(Parent_Action_Plan__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Action Plan Type</label>
    <type>Text</type>
</CustomField>