force-app/main/default/objects/Action_Plan__c/fields/Parent_AP_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_AP_Owner__c</fullName>
    <description>Parent action plan owner name</description>
    <formula>Parent_Action_Plan__r.Owner:User.FirstName + &#39; &#39; + Parent_Action_Plan__r.Owner:User.LastName</formula>
    <inlineHelpText>Parent action plan owner name</inlineHelpText>
    <label>Parent AP Owner</label>
    <type>Text</type>
</CustomField>