force-app/main/default/objects/Action_Plan__c/fields/Parent_AP_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_AP_Owner_Email__c</fullName>
    <formula>Parent_Action_Plan__r.Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent AP Owner Email</label>
    <type>Text</type>
</CustomField>