force-app/main/default/objects/Action_Plan__c/fields/Parent_AP_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_AP_Owner_Id__c</fullName>
    <formula>Parent_Action_Plan__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent AP Owner Id</label>
    <type>Text</type>
</CustomField>