force-app/main/default/objects/Action_Plan__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>