force-app/main/default/objects/Action_Plan__c/fields/Parent_Case_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Creation_Date__c</fullName>
    <label>Parent Case Creation Date</label>
    <type>DateTime</type>
</CustomField>