force-app/main/default/objects/Action_Plan__c/fields/Parent_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Status__c</fullName>
    <formula>TEXT( Parent_Case__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Status</label>
    <type>Text</type>
</CustomField>