force-app/main/default/objects/Action_Plan__c/fields/Pending_Child_AP__c.field-meta.xml
<CustomField>
    <fullName>Pending_Child_AP__c</fullName>
    <formula>Child_Action_Plans__c -  Completed_Child_Action_Plans__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Pending Child AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>