force-app/main/default/objects/Action_Plan__c/fields/Print_Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Print_Location_Region__c</fullName>
    <description>Office location regions where letters can be sent for signing</description>
    <inlineHelpText>Office location regions where letters can be sent for signing</inlineHelpText>
    <label>Print Location Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sydney Region</fullName>
            </value>
            <value>
                <fullName>Hunter Regional Offices</fullName>
            </value>
            <value>
                <fullName>Northern Regional Offices</fullName>
            </value>
            <value>
                <fullName>Western Regional Office</fullName>
            </value>
            <value>
                <fullName>Regional Office</fullName>
            </value>
            <value>
                <fullName>Southern Regional Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>