force-app/main/default/objects/Action_Plan__c/fields/Printing_Location__c.field-meta.xml
<CustomField>
    <fullName>Printing_Location__c</fullName>
    <inlineHelpText>Printing location for RMS CE letters</inlineHelpText>
    <label>Printing Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Print_Location_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>North Sydney (Miller Street)</fullName>
            </value>
            <value>
                <fullName>Parramatta (Argyle Street)</fullName>
            </value>
            <value>
                <fullName>Parramatta (Octagon)</fullName>
            </value>
            <value>
                <fullName>Parramatta (Wentworth Street)</fullName>
            </value>
            <value>
                <fullName>Newcastle (Darby &amp; Queen Streets)</fullName>
            </value>
            <value>
                <fullName>Woy Woy (George Street)</fullName>
            </value>
            <value>
                <fullName>Grafton (Fitzroy &amp; King Streets)</fullName>
            </value>
            <value>
                <fullName>Grafton (Victoria Street)</fullName>
            </value>
            <value>
                <fullName>Pacific Highway Office</fullName>
            </value>
            <value>
                <fullName>Glen Innes (Grey &amp; Ferguson Streets)</fullName>
            </value>
            <value>
                <fullName>Parkes (Currajong Street)</fullName>
            </value>
            <value>
                <fullName>Wagga Wagga (Simmons Street)</fullName>
            </value>
            <value>
                <fullName>Wollongong (Crown Street)</fullName>
            </value>
            <value>
                <fullName>Northern Regional Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>