force-app/main/default/objects/Action_Plan__c/fields/Printing_Location_Formula__c.field-meta.xml
<CustomField>
    <fullName>Printing_Location_Formula__c</fullName>
    <formula>TEXT( Printing_Location__c )</formula>
    <label>Printing Location</label>
    <type>Text</type>
</CustomField>