force-app/main/default/objects/Action_Plan__c/fields/Referring_Mp__c.field-meta.xml
<CustomField>
    <fullName>Referring_Mp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Minister</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Plans (Referring Minister)</relationshipLabel>
    <relationshipName>Action_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>