force-app/main/default/objects/Action_Plan__c/fields/Response_time_in_secs__c.field-meta.xml
<CustomField>
    <fullName>Response_time_in_secs__c</fullName>
    <label>Response time (in secs)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>