force-app/main/default/objects/Action_Plan__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft response</fullName>
            </value>
            <value>
                <fullName>Draft response and brief</fullName>
            </value>
            <value>
                <fullName>Reply for Electorate Office</fullName>
            </value>
            <value>
                <fullName>Referred to other portfolio</fullName>
            </value>
            <value>
                <fullName>No response required (NRR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>